--- a/src/TwitchMemeAlertsAuto.WPF/App.xaml
+++ b/src/TwitchMemeAlertsAuto.WPF/App.xaml
@@ -6,5 +6,7 @@
     DispatcherUnhandledException="Application_DispatcherUnhandledException"
     Exit="Application_Exit"
     Startup="Application_Startup">
-    <Application.Resources />
+    <Application.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+    </Application.Resources>
 </Application>
