--- a/src/TwitchMemeAlertsAuto.WPF/MainWindow.xaml
+++ b/src/TwitchMemeAlertsAuto.WPF/MainWindow.xaml
@@ -6,69 +6,42 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:TwitchMemeAlertsAuto.WPF"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="tmaa"
+    xmlns:properties="clr-namespace:TwitchMemeAlertsAuto.WPF.Properties"
+    xmlns:sys="clr-namespace:System;assembly=mscorlib"
+    xmlns:views="clr-namespace:TwitchMemeAlertsAuto.WPF.Views"
+    xmlns:vm="clr-namespace:TwitchMemeAlertsAuto.Core.ViewModels;assembly=TwitchMemeAlertsAuto.Core"
+    Title="{x:Static properties:Resources.MainWindowTitle}"
     Width="800"
     Height="450"
-    Loaded="Window_Loaded"
+    d:DataContext="{d:DesignInstance Type=vm:MainWindowViewModel}"
     mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.5*" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <StackPanel>
-            <Button
-                x:Name="ConnectTwitchButton"
-                Width="160"
-                Margin="5"
-                Click="ConnectTwitchButton_Click">
-                <TextBlock>
-                    <Run Text="Подключить Twitch" />
-                    <Run x:Name="ConnectTwitchButtonStausRun" Text="..." />
-                </TextBlock>
-            </Button>
-            <Button
-                x:Name="ConnectMemeAlertsButton"
-                Grid.Row="1"
-                Width="160"
-                Margin="5"
-                Click="ConnectMemeAlertsButton_Click">
-                <TextBlock>
-                    <Run Text="Подключить MemeAlerts" />
-                    <Run x:Name="ConnectMemeAlertsButtonStatusRun" Text="..." />
-                </TextBlock>
-            </Button>
+        <views:MainMenuView
+            Grid.Row="0"
+            Grid.ColumnSpan="3"
+            DataContext="{Binding MainMenuViewModel}" />
+        <StackPanel Grid.Row="2" Grid.Column="0">
+            <views:ConnectionView Margin="4,0,4,0" DataContext="{Binding ConnectionViewModel}" />
+            <views:AllRewardView Margin="4,8,4,0" DataContext="{Binding AllRewardViewModel}" />
         </StackPanel>
-        <GroupBox
-            Grid.Row="3"
-            Grid.Column="0"
-            Header="Награды">
-            <ScrollViewer>
-                <ItemsControl x:Name="RewardsListView" BorderThickness="0">
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate DataType="channelPoints:CustomReward">
-                            <local:RewardControl DataContext="{Binding}" />
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
-            </ScrollViewer>
-        </GroupBox>
-        <GroupBox
-            Grid.RowSpan="3"
+        <views:RewardsView
+            Grid.Row="1"
+            Grid.RowSpan="2"
             Grid.Column="1"
-            Header="Лог">
-            <ScrollViewer>
-                <ItemsControl x:Name="LogListView">
-                    <d:ListView.Items>
-                        <TextBlock Text="Выдано 10 мемов" />
-                    </d:ListView.Items>
-                </ItemsControl>
-            </ScrollViewer>
-        </GroupBox>
+            DataContext="{Binding RewardsViewModel}" />
+        <views:LogView
+            Grid.Row="1"
+            Grid.RowSpan="2"
+            Grid.Column="2"
+            DataContext="{Binding LogViewModel}" />
     </Grid>
 </Window>
