--- a/src/TwitchMemeAlertsAuto.WPF/Views/LogView.xaml
+++ b/src/TwitchMemeAlertsAuto.WPF/Views/LogView.xaml
@@ -2,6 +2,7 @@
     x:Class="TwitchMemeAlertsAuto.WPF.Views.LogView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:TwitchMemeAlertsAuto.WPF.Converters"
     xmlns:core="clr-namespace:TwitchMemeAlertsAuto.Core;assembly=TwitchMemeAlertsAuto.Core"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:TwitchMemeAlertsAuto.WPF.Views"
@@ -15,7 +16,8 @@
     Loaded="LogView_Loaded"
     mc:Ignorable="d">
     <UserControl.Resources>
-        <local:DateToRelativeConverter x:Key="DateToRelativeConverter" />
+        <converters:DateToRelativeConverter x:Key="DateToRelativeConverter" />
+        <converters:CollectionToVisibilityConverter x:Key="CollectionToVisibilityConverter" />
         <CollectionViewSource
             x:Key="LogGrouped"
             Filter="CollectionViewSource_Filter"
@@ -39,7 +41,10 @@
             <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <GroupBox Grid.Row="0" Header="{x:Static properties:Resources.Search}">
+        <GroupBox
+            Grid.Row="0"
+            Header="{x:Static properties:Resources.Search}"
+            Visibility="{Binding Log, Converter={StaticResource CollectionToVisibilityConverter}}">
             <TextBox x:Name="FilterTextBox" TextChanged="FilterTextBox_TextChanged" />
         </GroupBox>
         <GroupBox Grid.Row="1" Header="{x:Static properties:Resources.LogHeader}">
