--- a/src/TwitchMemeAlertsAuto.WPF/Views/RewardsView.xaml
+++ b/src/TwitchMemeAlertsAuto.WPF/Views/RewardsView.xaml
@@ -2,6 +2,7 @@
     x:Class="TwitchMemeAlertsAuto.WPF.Views.RewardsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:TwitchMemeAlertsAuto.WPF.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:TwitchMemeAlertsAuto.WPF"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -15,6 +16,7 @@
     mc:Ignorable="d">
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+        <converters:CollectionToVisibilityConverter x:Key="CollectionToVisibilityConverter" />
         <CollectionViewSource
             x:Key="RewardsCV"
             Filter="CollectionViewSource_Filter"
@@ -40,7 +42,10 @@
             <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <GroupBox Grid.Row="0" Header="{x:Static properties:Resources.Search}">
+        <GroupBox
+            Grid.Row="0"
+            Header="{x:Static properties:Resources.Search}"
+            Visibility="{Binding Rewards, Converter={StaticResource CollectionToVisibilityConverter}}">
             <TextBox x:Name="FilterTextBox" TextChanged="FilterTextBox_TextChanged" />
         </GroupBox>
         <GroupBox Grid.Row="1" Header="{x:Static properties:Resources.RewardsHeader}">
