--- a/src/TwitchMemeAlertsAuto.WPF/Views/LogView.xaml
+++ b/src/TwitchMemeAlertsAuto.WPF/Views/LogView.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:converters="clr-namespace:TwitchMemeAlertsAuto.WPF.Converters"
-    xmlns:core="clr-namespace:TwitchMemeAlertsAuto.Core;assembly=TwitchMemeAlertsAuto.Core"
+    xmlns:core="clr-namespace:TwitchMemeAlertsAuto.Core;assembly=TwitchMemeAlertsAuto.Core.Models"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:TwitchMemeAlertsAuto.WPF.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
