--- a/src/TwitchMemeAlertsAuto.WPF/Views/SupportersView.xaml
+++ b/src/TwitchMemeAlertsAuto.WPF/Views/SupportersView.xaml
@@ -1,15 +1,15 @@
-<UserControl
-    x:Class="TwitchMemeAlertsAuto.WPF.Views.RewardsView"
+﻿<UserControl
+    x:Class="TwitchMemeAlertsAuto.WPF.Views.SupportersView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:converters="clr-namespace:TwitchMemeAlertsAuto.WPF.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TwitchMemeAlertsAuto.WPF.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:properties="clr-namespace:TwitchMemeAlertsAuto.WPF.Properties"
     xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
-    xmlns:views="clr-namespace:TwitchMemeAlertsAuto.WPF.Views"
     xmlns:vm="clr-namespace:TwitchMemeAlertsAuto.Core.ViewModels;assembly=TwitchMemeAlertsAuto.Core"
-    d:DataContext="{d:DesignInstance Type=vm:RewardsViewModel}"
+    d:DataContext="{d:DesignInstance Type=vm:SupportersViewModel}"
     d:Height="600"
     d:Width="200"
     mc:Ignorable="d">
@@ -17,21 +17,22 @@
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         <converters:CollectionToVisibilityConverter x:Key="CollectionToVisibilityConverter" />
         <CollectionViewSource
-            x:Key="RewardsCV"
+            x:Key="SupportersCV"
             Filter="CollectionViewSource_Filter"
             IsLiveFilteringRequested="True"
             IsLiveSortingRequested="True"
-            Source="{Binding Rewards}">
+            Source="{Binding Supporters}">
             <CollectionViewSource.SortDescriptions>
-                <scm:SortDescription Direction="Ascending" PropertyName="Reward.Cost" />
+                <scm:SortDescription Direction="Descending" PropertyName="Supporter.LastSupport" />
+                <scm:SortDescription Direction="Descending" PropertyName="Supporter.SupporterName" />
             </CollectionViewSource.SortDescriptions>
             <d:CollectionViewSource.Source>
-                <x:Array Type="{x:Type vm:RewardViewModel}">
-                    <vm:RewardViewModel />
-                    <vm:RewardViewModel />
-                    <vm:RewardViewModel />
-                    <vm:RewardViewModel />
-                    <vm:RewardViewModel />
+                <x:Array Type="{x:Type vm:SupporterViewModel}">
+                    <vm:SupporterViewModel />
+                    <vm:SupporterViewModel />
+                    <vm:SupporterViewModel />
+                    <vm:SupporterViewModel />
+                    <vm:SupporterViewModel />
                 </x:Array>
             </d:CollectionViewSource.Source>
         </CollectionViewSource>
@@ -44,19 +45,19 @@
         <GroupBox
             Grid.Row="0"
             Header="{x:Static properties:Resources.Search}"
-            Visibility="{Binding Rewards, Converter={StaticResource CollectionToVisibilityConverter}}">
+            Visibility="{Binding Supporters, Converter={StaticResource CollectionToVisibilityConverter}}">
             <TextBox x:Name="FilterTextBox" TextChanged="FilterTextBox_TextChanged" />
         </GroupBox>
-        <GroupBox Grid.Row="1" Header="{x:Static properties:Resources.RewardsHeader}">
+        <GroupBox Grid.Row="1" Header="{x:Static properties:Resources.Supporters}">
             <Grid>
                 <ScrollViewer>
                     <ItemsControl
-                        x:Name="RewardsItemsControl"
+                        x:Name="SupportersItemsControl"
                         BorderThickness="0"
-                        ItemsSource="{Binding Source={StaticResource RewardsCV}}">
+                        ItemsSource="{Binding Source={StaticResource SupportersCV}}">
                         <ItemsControl.ItemTemplate>
-                            <DataTemplate DataType="{x:Type vm:RewardViewModel}">
-                                <views:RewardView />
+                            <DataTemplate DataType="{x:Type vm:SupporterViewModel}">
+                                <local:SupporterView />
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
                     </ItemsControl>
