--- a/src/TwitchMemeAlertsAuto.WPF/Views/SupportersView.xaml
+++ b/src/TwitchMemeAlertsAuto.WPF/Views/SupportersView.xaml
@@ -46,7 +46,10 @@
             Grid.Row="0"
             Header="{x:Static properties:Resources.Search}"
             Visibility="{Binding Supporters, Converter={StaticResource CollectionToVisibilityConverter}}">
-            <TextBox x:Name="FilterTextBox" TextChanged="FilterTextBox_TextChanged" />
+            <TextBox
+                x:Name="FilterTextBox"
+                TextChanged="FilterTextBox_TextChanged"
+                ToolTip="{x:Static properties:Resources.SearchForSupportersTooltip}" />
         </GroupBox>
         <GroupBox Grid.Row="1">
             <GroupBox.Header>
@@ -57,7 +60,8 @@
                         Padding="0"
                         BorderThickness="0"
                         Command="{Binding RefreshCommand}"
-                        Content="🔃" />
+                        Content="🔃"
+                        ToolTip="{x:Static properties:Resources.RefreshTooltip}" />
                 </StackPanel>
             </GroupBox.Header>
             <Grid>
