feat: add startup ability

--- a/src/TwitchMemeAlertsAuto.WPF/Views/MainMenuView.xaml
+++ b/src/TwitchMemeAlertsAuto.WPF/Views/MainMenuView.xaml
@@ -12,6 +12,11 @@
     mc:Ignorable="d">
     <Menu>
         <MenuItem Header="{x:Static properties:Resources.FileMenu}">
+            <MenuItem
+                Command="{Binding AddRemoveWinStartupCommand}"
+                Header="{x:Static properties:Resources.AddWinStartup}"
+                IsCheckable="True"
+                IsChecked="{Binding IsStartup}" />
             <MenuItem Command="{Binding ExitCommand}" Header="{x:Static properties:Resources.ExitMenu}" />
         </MenuItem>
         <MenuItem Header="{x:Static properties:Resources.HelpMenu}">
